--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
-    "expo-location": "^19.0.7",
+    "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.11",
     "expo-router": "~6.0.4",
     "expo-sensors": "^15.0.7",
@@ -40,7 +40,7 @@
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.1",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
